--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "daily-rewards",
     "claim"
   ],
-  "author": "",
+  "author": "getcakedieyoungx",
   "license": "MIT",
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "chalk": "^4.1.2",
+    "figlet": "^1.8.0"
   }
 }
